--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@primevue/themes": "^4.0.4",
     "pinia": "^2.1.7",
     "primevue": "^4.0.4",
+    "swiper": "^11.1.9",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
