--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pinia": "^2.1.7",
     "primevue": "^4.0.4",
     "swiper": "^11.1.9",
+    "tsc": "^2.0.4",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
