--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,5 +1,6 @@
 {
   "extends": "@tsconfig/node20/tsconfig.json",
+  "exclude": ["node_modules"],
   "include": [
     "vite.config.*",
     "vitest.config.*",
