--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,18 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "src/index.ts",
-      "use": "@vercel/node",
+      "src": "vite.config.ts",
+      "use": "@vercel/static-build",
       "config": {
-        "includeFiles": ["src/types/env.d.ts"]
+        "distDir": "dist"
       }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
